# gmum.r

./: .RData  .Rhistory  .gitignore  .travis.yml  2eSVM.md  CEC.md  CMakeLists.txt  CNAME  DESCRIPTION  GNG.md  LICENSE  NAMESPACE  README.md  SVM-Wrapper.md  SVM.md  _config.yml  caret.svm.models.R  comparative.tests.R  cproject  getting_started.html  index.html  mega_test.R  project  test_module.R
..Rcheck/: 00install.out  gmum.r-Ex.R  gmum.r-Ex.Rout  gmum.r-manual.tex
R/: cec.R  cec.plot.R  cec.print.R  cec.summary.R  generics.R  gmum.R  gmum.errors.R  gng-utils.R  gng-visualize.R  gng.R  gng.presets.R  gng.utils.R  gng.visualize.R  hello_gmum.R  igraph-utils.R  misc.R  print.R  svm.R  svm.breast_cancer.R  svm.plot.R  svm.utils.R  svm_utils.R  svmlight_process_files.R  test_flow.R  test_libsvm.R  utils.R  zzz.R
_includes/: about.html  academy.html  contribute.html  features.html  footer.html  header.html  modules.html  navbar.html  post_list.html  repository-history.html  team.html  tfml.html  theory.html
_layouts/: getting_started.html  main_page.html  post.html  post_list.html
_posts/: 2014-06-06-authors.md  2014-06-06-gng.md  2014-06-06-svm.md  2014-06-26-test.md  2014-11-20-authors.md  2014-11-20-gng.md  2014-11-20-svm.md  2014-11-27-cec.md  2014-12-02-authors.md  2014-12-18-cec.md  2015-01-09-cec.md  2015-01-13-cec.md  2015-01-13-svm.md  2015-01-15-cec.md  2015-01-15-gng.md  2015-02-14-cec.md  2015-02-17-cec.md
cmake/: FindR.cmake
css/: bootstrap.css  styles.css
data/: breast-cancer-data.txt  cec.ellipse_gauss.RData  cec.ellipsegauss.RData  cec.mouse1.RData  cec.mouse1.classic.RData  cec.mouse1.spherical.RData  cec.mouse2.spherical.RData  cec.mouse_1.RData  cec.mouse_1_classic.RData  cec.mouse_1_spherical.RData  cec.mouse_2_spherical.RData  cec.simple1.RData  cec.simple_1.RData  cec.tset.RData  cec_ellipse_gauss.RData  cec_mouse_1.RData  cec_mouse_1_classic.RData  cec_mouse_1_spherical.RData  cec_mouse_2_spherical.RData  cec_simple_1.RData  svm.transduction.RData  svm_breast_cancer_dataset.RData  svm_two_circles_dataset.RData  svm_two_ellipsoids_dataset.RData  svmlight_example
demo/: 00Index  cec.R  cec.Rmd  cec.html  cec.md  svm_demo.R
demo_presentation/: run_script.R
examples/: test_comparisive_svm_sparse.R  test_svm_news20.R
gource/: .gitignore  Makefile  captions
highlight/: highlight.pack.js
inst/: CITATION
js/: highlight.min.js  scripts.js
python/cmake/: .gitignore  CMakeLists.txt
src/: .cproject  .gitignore  .project  Algorithm.hpp  CEC.cpp  CEC.hpp  CMakeLists.txt  Cluster.cpp  Cluster.hpp  Doxyfile  Hartigan.cpp  Hartigan.hpp  HartiganMaster.cpp  HartiganMaster.hpp  LibSVMRunner.cpp  LibSVMRunner.h  Makefile  Makevars  Makevars.win  OldMakefile  README.md  Rsvm.c  SVM.cpp  SVM.h  cec_module.cpp  cec_module.hpp  hartigan.cpp  hartigan.hpp  hello_gmum.cpp  hello_gmum.h  kmeanspp_assignment.cpp  kmeanspp_assignment.hpp  lib_svm_runner.cpp  lib_svm_runner.h  libsvm_runner.cpp  libsvm_runner.h  main.cpp  norm.cpp  norm.h  output.txt  (+29 more)
src/Debug/: .project  LibSVMRunner.d  makefile  subdir.mk  svm-predict.d  svm-train.d  svm.d  svm_basic.d  svm_client.d  svm_flow_factory.d
src/cec/: CEC.cpp  CMakeLists.txt  Hartigan.cpp  Makefile  algorithm.cpp  assignment.cpp  cec.cpp  cecClient.cpp  cecConfiguration.cpp  cecModule.cpp  cec_configuration.cpp  cec_module.cpp  centroidsAssignment.cpp  centroids_assignment.cpp  cluster.cpp  clusterCustomFunction.cpp  cluster_custom_function.cpp  cluster_params.cpp  const.cpp  hartigan.cpp  kmeansppAssignment.cpp  kmeanspp_assignment.cpp  params.cpp  randomAssignment.cpp  random_assignment.cpp  user_assignment.cpp
src/doc/diagrams/: hartigan.vpp
src/gng/: CMakeLists.txt  GNGAlgorithm.cpp  GNGGraph.cpp  GNGServer.cpp  RInterface.cpp  gng_algorithm.cpp  gng_configuration.cpp  gng_module.cpp  gng_server.cpp
src/libsvm/: svm.cpp
src/libsvm-pure/: .cproject  .project  LibSVMRunner.cpp  LibSVMRunner.h  Makefile
src/svm/: CMakeLists.txt  libsvm_runner.cpp  log.cpp  svm.cpp  svm_basic.cpp  svm_client.cpp  svm_utils.cpp  svm_wrapper_module.cpp  svmlight_runner.cpp  two_e_svm_post.cpp  two_e_svm_pre.cpp
src/svmlight/: CMakeLists.txt  svm_common.c  svm_hideo.c  svm_learn.c
src/utils/: CMakeLists.txt  utils.cpp
tests/cpp/: .gitignore  CMakeLists.txt  GNUmakefile  Makefile  README.md  clustering_comparator.hpp  mouse_1_spherical_test.cc  testReader.cc
tests/cpp/cec/: ClusterTest.cc  Makefile  README.md  big_data_downloader.sh  big_data_tests.cc  big_data_tests.cpp  clusterTraceOnlyTest.cc  clusterTraceOnlyTest.cpp  cluster_reader.cpp  cluster_reader.hpp  cluster_trace_only_test.cpp  clustering_comparator.cpp  clustering_comparator.hpp  ellipse_gauss_test.cc  ellipse_gauss_test.cpp  firstTest.cc  mix_method_type_test.cpp  mouse_1_spherical_test.cc  mouse_1_spherical_test.cpp  mouse_1_test.cc  mouse_1_test.cpp  onlineTest.cc  onlineTest.cpp  online_test.cpp  parametrized_tests.cpp  simple_1_test.cc  simple_1_test.cpp  test_data_dirs_list  test_data_list  tests_fixture.cpp  tests_fixture.h  tests_fixture.hpp  uci_test.cpp
tests/cpp/cec/extra/: README.md  common.R  cran_cec_perf_test.R  data_generator.R  gmum_cec_perf_test.R  plot_generator.R  run.sh
tests/cpp/cec/extra/performance_tests/: clean.sh  common.R  external_dataset_tests.R  performance_tests.R  plot_generator.R  run.sh  uci_dataset_tests.R
tests/cpp/cec/extra/valgrind/: test_demo.R  valgrind.sh
tests/cpp/cec/not_working/: big_data_tests.xcpp  testReader.xcpp
tests/cpp/cec/not_working/utils/: cluster_test_reader.xcpp
tests/cpp/cec/utils/: Makefile  cluster_test_reader.cpp  cluster_test_reader.hpp
tests/cpp/data/mouse_1_spherical/: type.txt
tests/cpp/gng/: basic_integration_tests.cc  basic_integration_tests.cpp  parts_tests.cc  parts_tests.cpp
tests/cpp/svm/: 2_e_test.cc  2_e_test.cpp  Makefile  libsvm_test.cc  libsvm_test.cpp  main.cpp  svm_client_test.cpp  svm_configuration_test.cpp  svm_helpers.cpp  svm_helpers.h  svm_utils_test  svm_utils_test.cc  svmlight_runner_unittest.cc  svmlight_test.cpp
tests/cpp/utils/: utils_test.cpp
(+441 files in other folders)
