cmake_minimum_required(VERSION 3.0)

INCLUDE_DIRECTORIES(../include/svm)
SET(INTERFACE_PATH "../interface/")

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(${INTERFACE_PATH}svm/svm_basic.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(${INTERFACE_PATH}svm/svm_basic.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_MODULE(svm_basic python ${INTERFACE_PATH}svm/svm_basic.i ../src/svm/svm_basic.cpp)
SWIG_LINK_LIBRARIES(svm_basic ${PYTHON_LIBRARIES} armadillo)
